Added my credit index.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </div>
     </main>
     <footer>
-      Site meramente ilustrativo
+      Site meramente ilustrativo (created by Amitay Rodrigues)
     </footer>
     <script src="./script.js"></script>
   </body>
